United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7125442 jar application located in two bytes character named folder cannot be run with JRE 7 u1/u2
7125442 : jar application located in two bytes character named folder cannot be run with JRE 7 u1/u2

Details
Type:
Bug
Submit Date:
2011-12-28
Status:
Closed
Updated Date:
2012-06-18
Project Name:
JDK
Resolved Date:
2012-04-21
Component:
tools
OS:
windows_xp,windows_7
Sub-Component:
launcher
CPU:
x86
Priority:
P2
Resolution:
Fixed
Affected Versions:
7,7u2
Fixed Versions:
8

Related Reports
Backport:
Duplicate:

Sub Tasks

Description
To reproduce:
----->
OS:  Windows 7 Professional 64bit Japanese
JRE: 7u2

1. Create a folder whose path includes two-byte character
e.g. C:\??????>

2. Put a demo jar file under this folder
3. Launch demo jar file

C:\??????>Java2Demo.jar

or

Double click demo jar file directly at Explorer
<-----

The jar file never be executed. 
If folder name is changed to english character, the problem will disappear.
There were several crucial points missing to reproduce the problem:
1. JA locale needs to be set.
2. The command must be executed as java -jar c:/XXX/Notepad.jar
   *and* in a cmd.exe, running with shells mks or cygwin will
    always fail.

                                    

Comments
EVALUATION

The jarfile path name was not being converted to platform specific
string, before calling into the VM.
                                     
2012-01-03



Hardware and Software, Engineered to Work Together